# flutterwave-v3-models

./: Cargo.toml
src/: lib.rs  payload.rs  rest.http
src/api_responses/: custom_stat_code.rs  mod.rs
src/charge/: ach.rs
src/charge/bank_transfer/: mod.rs
src/charge/direct_charge/: mod.rs
src/common/: charge_res_data.rs  customer.rs  mod.rs  multi_res_meta.rs  payload.rs
src/fwcall/: mod.rs
src/payment_plans/: cancel_plan.rs  create_plan.rs  get_plan.rs  get_plans.rs  update_plan.rs
src/preauthorization/: capture_preauth_charge.rs  mod.rs  refund_preauth_charge.rs  void_preauth_charge.rs
src/transactions/: fetch_refunded_trans.rs  get_transactions.rs  mod.rs  query_trans_fees.rs  refund_trans.rs  resend_failed_webhook.rs  transaction.rs  transaction_verify.rs  view_trans_timeline.rs
src/validate_charge/: mod.rs
src/virtual_acct_number/: create_virtual_account.rs  get_bulk_virtual_acct_details.rs  get_virtual_acct.rs  mod.rs  virt_res_acct_data.rs
