[package]
name = "flutterwave-v3-models"
version = "0.1.0-alpha.1"
edition = "2021"
description = "models crate for flutterwaveV3"
repository = "https://github.com/didoloan/flutterwave-models.git"
homepage = "https://github.com/didoloan/flutterwave-models.git"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }